enhance runContainer
